fix: 네비게이션바 z-index 버그 수정

--- a/src/components/Organisms/NavBar.module.scss
+++ b/src/components/Organisms/NavBar.module.scss
@@ -1,6 +1,8 @@
 @import "@/styles/variables";
 
 .nav_container {
+    z-index: 9999;
+
     width: 100%;
     height: $nav-height;
 
